--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <header class="bg-white shadow-sm py-4">
         <nav class="container mx-auto px-4 flex justify-between items-center">
             <div class="p-2">
-                <img src="http://googleusercontent.com/file_content/2" alt="OH Dibs Logo" class="ohdibs-logo">
+                <img src="https://drive.google.com/file/d/1ZkFK5gMLvmuvjH_bWJTBS94LEwB8dChd/view?usp=sharing" alt="OH Dibs Logo" class="ohdibs-logo">
             </div>
             <ul class="hidden md:flex space-x-6">
                 <li><a href="index.html" class="text-red-700 font-medium transition duration-200">Home</a></li>
