--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <header class="bg-white shadow-sm py-0"> <!-- Removed pt-4, changed to py-0 for no vertical space -->
         <nav class="container mx-auto px-4 flex justify-between items-center py-0"> <!-- Removed py-4, changed to py-0 for no vertical space -->
             <div class=""> <!-- Removed p-2 -->
-                <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/Untitled%20design%20%282%29.png" alt="OH Dibs Logo" class="ohdibs-logo">
+                <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo">
             </div>
             <ul class="hidden md:flex space-x-6">
                 <li><a href="index.html" class="text-[var(--color-primary-red)] font-medium transition duration-200">Home</a></li>
