--- a/features.html
+++ b/features.html
@@ -11,6 +11,10 @@
     <!-- Google Fonts - Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --color-primary-red: #FF0000; /* Pure Red - commonly used for vibrant logos */
+            --color-dark-red: #CC0000; /* A slightly darker shade of pure red */
+        }
         body {
             font-family: 'Inter', sans-serif;
             background-color: #f8fafc; /* Light Slate 50 */
@@ -18,7 +22,7 @@
         }
         /* Custom styles for better aesthetics */
         .btn-primary {
-            background-color: #dc2626; /* Red 700 */
+            background-color: var(--color-primary-red);
             color: white;
             padding: 0.75rem 1.5rem;
             border-radius: 0.5rem; /* rounded-lg */
@@ -27,7 +31,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .btn-primary:hover {
-            background-color: #b91c1c; /* Red 800 */
+            background-color: var(--color-dark-red);
         }
         .card {
             background-color: white;
@@ -40,31 +44,70 @@
             transform: translateY(-5px);
         }
         .feature-icon {
-            color: #dc2626; /* Red 700 */
+            color: var(--color-primary-red);
         }
         .ohdibs-logo {
-            height: 40px; /* Adjust height as needed */
+            height: 120px; /* Adjusted from 40px to 120px (tripled) */
             width: auto;
+        }
+        /* FAQ Accordion styles (limited JS implementation) */
+        .faq-item {
+            background-color: white;
+            border-radius: 0.5rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin-bottom: 1rem;
+            overflow: hidden;
+        }
+        .faq-question {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1.25rem 1.5rem;
+            font-weight: 600;
+            cursor: pointer;
+            color: #1e293b;
+            transition: background-color 0.3s ease;
+        }
+        .faq-question:hover {
+            background-color: #f1f5f9; /* Slate 100 */
+        }
+        .faq-answer {
+            padding: 0 1.5rem 1.25rem 1.5rem;
+            color: #475569; /* Slate 600 */
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.5s ease-out, padding 0.5s ease-out;
+        }
+        .faq-answer.open {
+            max-height: 200px; /* Adjust as needed */
+            padding: 0.75rem 1.5rem 1.25rem 1.5rem;
+            transition: max-height 0.7s ease-in, padding 0.7s ease-in;
+        }
+        .faq-icon {
+            transition: transform 0.3s ease;
+        }
+        .faq-question.active .faq-icon {
+            transform: rotate(180deg);
         }
     </style>
 </head>
 <body class="antialiased">
 
     <!-- Header Section -->
-    <header class="bg-white shadow-sm py-4">
+    <header class="bg-[#FF0000] shadow-sm py-4">
         <nav class="container mx-auto px-4 flex justify-between items-center">
             <div class="p-2">
-                <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo">
+                <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/Untitled%20design%20%282%29.png" alt="OH Dibs Logo" class="ohdibs-logo">
             </div>
             <ul class="hidden md:flex space-x-6">
-                <li><a href="index.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">Home</a></li>
-                <li><a href="features.html" class="text-red-700 font-medium transition duration-200">Features</a></li>
-                <li><a href="pricing.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">Pricing</a></li>
-                <li><a href="faq.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">FAQ</a></li>
-                <li><a href="contact-page.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">Contact</a></li>
+                <li><a href="index.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Home</a></li>
+                <li><a href="features.html" class="text-white font-medium transition duration-200">Features</a></li>
+                <li><a href="pricing.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Pricing</a></li>
+                <li><a href="faq.html" class="text-white hover:text-gray-200 font-medium transition duration-200">FAQ</a></li>
+                <li><a href="contact-page.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Contact</a></li>
             </ul>
             <!-- Mobile Menu Button (Hamburger) -->
-            <button class="md:hidden text-gray-700 focus:outline-none">
+            <button class="md:hidden text-white focus:outline-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
             </button>
         </nav>
@@ -116,13 +159,13 @@
     </section>
 
     <!-- Call to Action / Contact Section (replicated for standalone page) -->
-    <section class="bg-red-800 text-white py-16 md:py-24 text-center rounded-t-3xl shadow-xl">
+    <section class="bg-[var(--color-dark-red)] text-white py-16 md:py-24 text-center rounded-t-3xl shadow-xl">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Ready to Transform Your Open Houses?</h2>
             <p class="text-lg md:text-xl mb-10 max-w-3xl mx-auto opacity-90">
                 Join forward-thinking brokerages transforming their open house management.
             </p>
-            <a href="contact-page.html" class="btn-primary bg-white text-red-800 hover:bg-gray-100 inline-block">
+            <a href="contact-page.html" class="btn-primary bg-white text-[var(--color-dark-red)] hover:bg-gray-100 inline-block">
                 Contact Us Today
             </a>
         </div>
@@ -143,5 +186,25 @@
         </div>
     </footer>
 
+    <script>
+        function toggleFAQ(element) {
+            const answer = element.nextElementSibling;
+            const icon = element.querySelector('.faq-icon');
+
+            if (answer.classList.contains('open')) {
+                answer.classList.remove('open');
+                element.classList.remove('active');
+            } else {
+                // Close all other open FAQ items
+                document.querySelectorAll('.faq-answer.open').forEach(item => {
+                    item.classList.remove('open');
+                    item.previousElementSibling.classList.remove('active');
+                });
+
+                answer.classList.add('open');
+                element.classList.add('active');
+            }
+        }
+    </script>
 </body>
 </html>
